--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,8 @@
     <string name="screen_title_debug_console">Console: %1$s</string>
     <string name="screen_title_settings">Settings</string>
     <string name="screen_title_instructions">Instructions</string>
+    <string name="screen_title_setup_geofence">Setup geofence</string>
+
 
     <string name="no_network">No network</string>
     <string name="no_configured_network">No saved network</string>
@@ -315,6 +317,9 @@
     <string name="floorplan_image_read_error">Unsupported image format!</string>
     <string name="floorplan_copy_failed">Failed to copy floor plan!</string>
     <string name="floorplan_file_exceeeds_size">Floorplan file size exceeds %1$s!</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
