--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -166,6 +166,7 @@
     <string name="menu_rename">Rename network</string>
     <string name="menu_forget">Forget network</string>
     <string name="menu_firmware_status">Firmware status</string>
+    <string name="menu_switch_operation_mode">Switch operation mode</string>
     <string name="menu_autopositioning">Auto positioning</string>
     <string name="menu_show_errors">Show errors</string>
 
