UI Updates: unit set and SlaveInfo field explainations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,7 +109,7 @@
     <string name="off">OFF</string>
 
     <!-- slave detail -->
-    <string name="slave_detail_config">Slave Position (UNIT TBD)</string>
+    <string name="slave_detail_config">Slave Position (UNIT: CM)</string>
     <string name="slave_assoc_config">Slave Association ID</string>
     <string name="slave_assoc_input_hint">Enter the Association ID (e.g. Vehicle ID)</string>
     <string name="slave_detail_pos_x_coupler">CPLR(+:inside)</string>
@@ -117,6 +117,16 @@
     <string name="slave_detail_pos_z_top_of_rail">TOR(+:over)</string>
     <string name="slave_input_invalid">Invalid slave values!</string>
     <string name="slave_input_exceeds_range">Slave values out of range!</string>
+    <string name="slave_field_x_title">CPLR: </string>
+    <string name="slave_field_y_title">CL: </string>
+    <string name="slave_field_z_title">TOR: </string>
+    <string name="slave_field_x_detail">Longitudinal distance towards coupler.</string>
+    <string name="slave_field_y_detail">Lateral distance towards track center line.</string>
+    <string name="slave_field_z_detail">Vertical distance towards top of the rail.</string>
+    <string name="slave_field_x_detail_sign">\t\tPositive(+) towards inside of the vehicle.</string>
+    <string name="slave_field_y_detail_sign">\t\tPositive(+) towards conductor (COND.) side of the corresponding vehicle end.</string>
+    <string name="slave_field_z_detail_sign">\t\tPositive(+) upwards.</string>
+
 
     <!-- discovery -->
     <string name="discovery_section_title_networks">networks</string>
