Finished encoding end information into Slave Y field: adjust the integer by modulo of 3: 0-> unknown; 1-> B end; 2 -> A end; Losing at max 2 cm precision.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,6 +109,7 @@
     <string name="off">OFF</string>
 
     <!-- slave/master detail -->
+    <string name="slave_master_detail_slave_side">Master/Slave End Side (A/B)</string>
     <string name="slave_detail_config">Slave Position (CM)</string>
     <string name="slave_assoc_config">Slave Association ID</string>
     <string name="slave_master_assoc_input_hint">Enter the Association ID (e.g. Vehicle ID)</string>
@@ -117,15 +118,17 @@
     <string name="slave_detail_pos_z_top_of_rail">TOR(+:over)</string>
     <string name="slave_input_invalid">Invalid slave values!</string>
     <string name="slave_input_exceeds_range">Slave values out of range!</string>
+    <string name="slave_master_must_select_side">Slave/Master must select end side!</string>
     <string name="slave_master_field_x_title">CPLR: </string>
     <string name="slave_master_field_y_title">CL: </string>
     <string name="slave_master_field_z_title">TOR: </string>
     <string name="slave_master_field_x_detail">Longitudinal distance towards coupler.</string>
     <string name="slave_master_field_y_detail">Lateral distance towards track center line.</string>
     <string name="slave_master_field_z_detail">Vertical distance towards top of the rail.</string>
-    <string name="slave_master_field_x_detail_sign">\t\tPositive(+) towards inside of the vehicle.</string>
-    <string name="slave_master_field_y_detail_sign">\t\tPositive(+) towards conductor side of that vehicle end.</string>
-    <string name="slave_master_field_z_detail_sign">\t\tPositive(+) upwards.</string>
+    <string name="slave_master_field_x_detail_sign">\t\tPOS.(+) towards inside of the vehicle.</string>
+    <string name="slave_master_field_y_detail_sign">\t\tPOS.(+) towards conductor side of that end.</string>
+    <string name="slave_master_field_y_error_sign">\t\tExpect ±2cm error for Slave due to encoding method.</string>
+    <string name="slave_master_field_z_detail_sign">\t\tPOS.(+) upwards.</string>
     <string name="master_label_editable_disabled_explain">(Note: Label is NOT editable for Masters)</string>
     <string name="slave_info_position_property_title">Position (CM)</string>
     <string name="slave_info_position_template">CPLR = %1$s, CL = %2$s, TOR = %3$s, ID = %4$s</string>
@@ -170,6 +173,10 @@
 
     <string name="node_type_slave">slave</string>
     <string name="node_type_master">master</string>
+
+    <string name="slave_master_side_A">A End</string>
+    <string name="slave_master_side_B">B End</string>
+    <string name="slave_master_side_unknown">Unknown (default)</string>
 
     <string name="node_ble_pattern">BLE: %1$s</string>
     <string name="node_id_pattern">ID: %1$s</string>
