Formatted the MasterInformativePosition implementation. Called off the android development (Although: pending test and debugging)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,14 +110,16 @@
 
     <!-- slave/master detail -->
     <string name="slave_master_detail_slave_side">Master/Slave End Side (A/B)</string>
-    <string name="slave_detail_config">Slave Position (CM)</string>
-    <string name="slave_assoc_config">Slave Association ID</string>
+    <string name="slave_master_detail_config">Master/Slave Position (CM)</string>
+    <string name="slave_master_assoc_config">Master/Slave Association ID</string>
     <string name="slave_master_assoc_input_hint">Enter the Association ID (e.g. Vehicle ID)</string>
-    <string name="slave_detail_pos_x_coupler">CPLR(+:inside)</string>
-    <string name="slave_detail_pos_y_centerline">CL(+:COND.)</string>
-    <string name="slave_detail_pos_z_top_of_rail">TOR(+:over)</string>
+    <string name="slave_master_detail_pos_x_coupler">CPLR(+:inside)</string>
+    <string name="slave_master_detail_pos_y_centerline">CL(+:COND.)</string>
+    <string name="slave_master_detail_pos_z_top_of_rail">TOR(+:over)</string>
     <string name="slave_input_invalid">Invalid slave values!</string>
+    <string name="master_input_invalid">Invalid master values!</string>
     <string name="slave_input_exceeds_range">Slave values out of range!</string>
+    <string name="master_input_exceeds_range">Master values out of range!</string>
     <string name="slave_master_must_select_side">Slave/Master must select end side!</string>
     <string name="slave_master_field_x_title">CPLR: </string>
     <string name="slave_master_field_y_title">CL: </string>
@@ -130,6 +132,7 @@
     <string name="slave_master_field_y_error_sign">\t\tExpect ±2cm error for Slave due to encoding method.</string>
     <string name="slave_master_field_z_detail_sign">\t\tPOS.(+) upwards.</string>
     <string name="master_label_editable_disabled_explain">(Note: Label is NOT editable for Masters)</string>
+
     <string name="slave_info_position_property_title">Position (CM)</string>
     <string name="slave_info_position_template">CPLR = %1$s, CL = %2$s, TOR = %3$s, ID = %4$s</string>
     
