--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
   -->
 
 <resources>
-    <string name="app_name">DRTLS</string>
+    <string name="app_name">DRTLS RURail</string>
 
     <string name="app_version">Version: %1$s</string>
     <string name="drag_handle">drag handle</string>
